fix: element overflow elipsis

--- a/src/components/DashboardTable/TableBody/styles.css
+++ b/src/components/DashboardTable/TableBody/styles.css
@@ -1,24 +1,8 @@
-.table__body {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.table__row {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    padding: 1rem;
-    border-bottom: 1px solid var(--gray);
-}
-
 .table__element {
     text-align: center;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-
     width: 8rem;
 }
 
